--- a/scss/modules/_menu.scss
+++ b/scss/modules/_menu.scss
@@ -43,20 +43,11 @@
     box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.7);
     @include position(absolute, auto, auto, 5%, 5%, 40);
     transition: transform 0.4s cubic-bezier(0.33, 1, 0.68, 1);
-    @media (min-width: 767px) {
-      width: 60px;
-      height: 60px;
-      border-radius: 60px;
-    }
     svg {
       width: 20px;
       vertical-align: bottom;
       transform-origin: center center;
       transition: transform 0.3s cubic-bezier(0.33, 1, 0.68, 1);
-      @media(min-width:767px){
-        width: 35px;
-        margin: 12px 0 0 0;
-      }
     }
   }
   &__menu {
@@ -79,10 +70,6 @@
       svg {
         width: 25px;
         height: 25px;
-        @media (min-width: 767px) {
-          width: 50px;
-          height: 50px;
-        }
     }
   }
 }
